# sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain.cmake
src/: alsa.cpp  alsa.hpp  app.cpp  app.hpp  buffer.hpp  list.hpp  logger.cpp  logger.hpp  main.cpp  memory.cpp  memory.hpp  terminal.cpp  terminal.hpp  types.hpp  utils.cpp  utils.hpp
src/app/: app.cpp  app.hpp
src/audio_backend/: miniaudio_backend.cpp  miniaudio_backend.hpp
src/memory/: memory.cpp  memory.hpp
